src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-dwU-dhU-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\ndefault column width: U\ndefault window height: U\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 1239 × 688, bounds: 1239 × 688, states: []

post-map configures:
size: 1239 × 688, bounds: 1239 × 688, states: [Activated]
